--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,230 @@ html, body {
     height: 100%;
     padding: 0px;
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #e5e7ea;
 }
 
 body {
     background-color: #454a5d;
+    overflow: hidden;
+    
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+button:focus {outline:0;}
+
+.thin-weight { font-weight: 100; }
+.light-weight { font-weight: 300; }
+.regular-weight { font-weight: 400; }
+.bold-weight { font-weight: 700; }
+
+::-webkit-scrollbar { 
+    display: none; 
+}
+
+.text-color-dot {
+    position: relative;
+}
+
+.text-color-dot span {
+    border-radius: 50%;
+    width: 100%;
+    position: absolute;
+    background-color: #3dc4a1;
+    bottom: 20%;
+}
+
+h1 {
+    font-size: 6rem;
 }
 
 .section {
     height: 100vh;
     position: relative;
-    border: 5px solid #FFF;
+}
+
+.section video {
+    position: relative;
+    width: 100%;
+}
+
+.video-container {
+    max-width: 100%;
+    max-height: 100vh;
+    overflow: hidden;
+}
+
+.video-button-container {
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    position: absolute;
+    background-color: #2b2d3a;
+    left: 0;
+    top: 0;
+}
+
+.video-button {
+    transition: all ease 0.3s 0.2s;
+    border: none;
+    display: inline-block;
+    background-color: #454a5d;
+    color: #2b2d3a;
+    border-radius: 5px;
+    width: 100px;
+    height: 50px;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -50px;
+    position: absolute;
+}
+
+.video-button-bg {
+    -webkit-animation: video-button-bg-out 0.3s ease-out 1;
+    animation: video-button-bg-out 0.3s ease-out 1;
+    border-radius: 50%;
+    opacity: 0;
+    width: 0%;
+    height: 0%;
+    margin-top: 0px;
+    margin-left: 0px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    background-color: #f26f81;
+    background-image: url("../assets/images/play-btn.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.video-button p {
+    transition: all ease 0.3s 0.3s;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+    position: relative;
+    margin-top: -10px;
+    opacity: 1;
+}
+
+.video-button:hover {
+    transition: all ease 0.3s;
+    border-radius: 50%;
+    height: 100px;
+    margin-top: -50px;
+}
+
+.video-button:hover .video-button-bg {
+    transition: all ease 0.15s 0.2s;
+    -webkit-animation: video-button-bg-in 0.15s ease-out 1;
+    animation: video-button-bg-in 0.15s ease-out 1;
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+    cursor: pointer;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    margin-top: -50px;
+    margin-left: -50px;
+}
+
+.video-button p:hover {
+    cursor: pointer;
+}
+
+.video-button:hover p {
+    transition: all ease 0.3s;
+    opacity: 0;
+}
+
+.logo-container {
+    text-align: center;
+    position: absolute;
+    margin-top: 10%;
+    z-index: 1;
+}
+
+.logo-container img {
+    width: 100%;
+}
+
+/* KEYFRAME ANIMATIONS */
+@keyframes video-button-bg-in {
+    0% {
+        opacity: 0;
+        width: 0%;
+        height: 0%;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+    100% {
+        opacity: 1;
+        width: 100%;
+        height: 100%;
+        margin-top: -50px;
+        margin-left: -50px;
+    }
+}
+
+@-webkit-keyframes video-button-bg-in {
+    0% {
+        opacity: 0;
+        width: 0%;
+        height: 0%;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+    100% {
+        opacity: 1;
+        width: 100%;
+        height: 100%;
+        margin-top: -50px;
+        margin-left: -50px;
+    }
+}
+
+@keyframes video-button-bg-out {
+    0% {
+        opacity: 1;
+        width: 100%;
+        height: 100%;
+        margin-top: -50px;
+        margin-left: -50px;
+    }
+    100% {
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        margin-top: -50px;
+        margin-left: -50px;
+    }
+}
+
+@-webkit-keyframes video-button-bg-out {
+    0% {
+        opacity: 1;
+        width: 100%;
+        height: 100%;
+        margin-top: -50px;
+        margin-left: -50px;
+    }
+    100% {
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        margin-top: -50px;
+        margin-left: -50px;
+    }
 }
